# TrueLora

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: critique.md
experiments/: ensemble_epistemic.py
experiments/gpt2/: manifest.jsonl  run_experiment.py
notebooks/: README.md  cot_think_compare.ipynb  matutake_coding_lora_tutorial.ipynb
src/true_lora/: __init__.py  adapter.py  apply.py  bank.py  benchmark.py  cli.py  consistency.py  generator.py  hf_eval.py  peft_io.py  quality.py  reliability.py  reporting.py  repro.py  sensitivity.py  sft.py  text.py  toy_eval.py  train.py  zeroshot.py
tests/: smoke.py  test_true_lora.py
